--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Seppe Gadeyne",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "wrangler": "^3.83.0"
   }
 }
