--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "cloudflare-scriptrewriter",
+  "name": "cloudflare-tagrewriter",
   "version": "1.0.0",
-  "description": "Rewrite HTML script tags to <template> tags",
+  "description": "Rewrite certain HTML tags to <template> tags",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
