--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,5 @@ main = "src/index.js"
 compatibility_date = "2024-06-03"
 
 [observability]
-enabled = true
-head_sampling_rate = 1
+enabled = false
+head_sampling_rate = 0
